--- a/index.html
+++ b/index.html
@@ -1003,10 +1003,11 @@
         <div class="col-md-2"> </div>
         <div class="col-md-8">
           <div class="text-center">
-            <h2 class="heading_space">Flavor Your Moments with Us</h2>
-            <p class="heading_space detail">Savor memorable events with Sree Rajesh Caterers—where taste meets
-              excellence. Share your details, and let's craft your perfect celebration together.</p>
-            <a href="#order-form" class="btn-common-white page-scroll">Reach out  to  us </a>
+            <h2 class="heading_space">A Legacy of Culinary Excellence</h2>
+            <p class="heading_space detail">With over two decades of crafting unforgettable events, Sree Rajesh Caterers
+              brings extensive expertise to your table. Let us transform your special day into a masterpiece of flavor
+              and hospitality.</p>
+            <a href="#order-form" class="btn-common-white page-scroll">Plan Your Event</a>
           </div>
         </div>
         <div class="col-md-2"></div>
