--- a/index.html
+++ b/index.html
@@ -1143,6 +1143,48 @@
   </div>
   <!-- //instagram-feeds -->
 
+  <!-- Order Form Section -->
+  <section class="w3l-contact-2" id="order-form" style="padding: 5rem 0;">
+    <div class="container py-lg-5 py-md-4 py-2">
+      <div class="w3l-header-sec text-center mb-md-5 mb-4">
+        <h5 class="sub-title">Plan Your Event</h5>
+        <h3 class="title-style">Book Your Experience</h3>
+      </div>
+      <div class="contact-grids d-grid" style="display: flex; justify-content: center;">
+        <div class="contact-right" style="width: 100%; max-width: 800px;">
+          <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
+            <div class="input-grids"
+              style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-bottom: 20px;">
+              <input type="text" name="w3lName" placeholder="Your Name*" class="contact-input" required=""
+                style="width: 100%; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;">
+              <input type="email" name="w3lSender" placeholder="Your Email*" class="contact-input" required=""
+                style="width: 100%; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;">
+              <input type="text" name="w3lPhone" placeholder="Phone Number*" class="contact-input" required=""
+                style="width: 100%; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;">
+              <input type="text" name="w3lEvent" placeholder="Event Type*" class="contact-input"
+                style="width: 100%; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;">
+              <input type="date" name="w3lDate" placeholder="Event Date*" class="contact-input"
+                style="width: 100%; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;">
+              <input type="number" name="w3lGuests" placeholder="Guest Count*" class="contact-input"
+                style="width: 100%; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;">
+            </div>
+            <div class="form-input" style="margin-bottom: 20px;">
+              <textarea name="w3lMessage" placeholder="Additional Details (Menu preferences, location, etc.)*"
+                required=""
+                style="width: 100%; height: 150px; padding: 14px 20px; border: 1px solid #eee; border-radius: 8px; outline: none;"></textarea>
+            </div>
+            <div class="form-buttonhny text-center">
+              <button class="btn btn-style btn-primary"
+                style="padding: 12px 35px; border-radius: 30px; font-weight: 600; border: none; background-color: #f50537; color: #fff;">Submit
+                Request</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //Order Form Section -->
+
   <!-- footer -->
   <footer class="w3l-footer-16">
     <div class="footer-top-16 py-5 footnew">
