--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
   <footer class="w3l-footer-16">
     <div class="footer-top-16 py-5 footnew">
       <div class="container pt-lg-5 pt-md-4 pt-2 pb-lg-4 pb-2">
-        <div class="row" data-aos="fade-down" data-aos-duration="3000">
+        <div class="row">
           <div class="col-lg-3 col-sm-6">
             <h3>About Us</h3>
             <p>With over 25+ years of experience in event management and catering, we have been delivering exceptional
