--- a/Contact.html
+++ b/Contact.html
@@ -97,11 +97,11 @@
         }
 
         .footer-top-16 {
-            background-color: #CC2027;
+            background-color: #c58723;
         }
 
         .copy-section {
-            background-color: #CC2027;
+            background-color: #c58723;
         }
 
         .w3l-footer-16 h3 {
