--- a/Gallery.html
+++ b/Gallery.html
@@ -172,7 +172,7 @@
             height: 65px;
             line-height: 65px;
             border-radius: 50%;
-            background: #CC2027;
+            background: #c58723;
             color: #fff;
         }
 
@@ -788,11 +788,11 @@
         }
 
         .footer-top-16 {
-            background-color: #CC2027;
+            background-color: #c58723;
         }
 
         .copy-section {
-            background-color: #CC2027;
+            background-color: #c58723;
         }
 
         .w3l-footer-16 h3 {
