--- a/Veg.html
+++ b/Veg.html
@@ -64,7 +64,7 @@
 
         .grids_info i {
             font-size: 28px;
-            background: #CC2027;
+            background: #c58723;
             color: #fff;
             width: 60px;
             height: 60px;
