--- a/About.html
+++ b/About.html
@@ -649,16 +649,8 @@
         }
 
         /*--//owl-slider--*/
-        .w3l-testimonials .cusrtomer-layout {
-            background: url(images/Testimonial.jpg) no-repeat center;
-            -ms-background-size: cover;
-            background-size: cover;
-            z-index: 0;
-            position: relative;
-            align-items: center;
-            background-size: cover;
-            z-index: 0;
-            position: relative;
+        z-index: 0;
+        position: relative;
         }
 
         .w3l-testimonials .cusrtomer-layout::before {
@@ -1079,7 +1071,7 @@
                     <!--<a class="btn btn-style1 mt-md-5 mt-4" href="#about"> Read More </a>-->
                 </div>
                 <div class="col-lg-6 left-wthree-img mt-lg-0 mt-5">
-                    <img src="images/about1.jpg" alt="" style="width:100%;" class="img-fluid radius-image"
+                    <img src="rajeshimedia/homeabout.png" alt="" style="width:100%;" class="img-fluid radius-image"
                         data-aos="zoom-in-up" data-aos-duration="3000">
                 </div>
             </div>
@@ -1091,7 +1083,7 @@
         <div class="container py-md-5 py-4">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="images/about2.jpg" alt="" class="img-fluid radius-image" style="width: 100%;"
+                    <img src="rajeshimedia/marriage.png" alt="" class="img-fluid radius-image" style="width: 100%;"
                         data-aos="zoom-in-down" data-aos-duration="3000">
                 </div>
                 <div class="col-lg-6">
@@ -1173,11 +1165,14 @@
                     <h3 class="title-style text-white" style="color: #fff;">Testimonials</h3>
                 </div>
                 <div class="testimonial-width pt-lg-4">
-                    <div id="owl-demo1" class="owl-two owl-carousel owl-theme">
+                    <div id="owl-testimonials" class="owl-two owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonial-content">
                                 <div class="testimonial">
-
+                                    <div class="test-img">
+                                        <i class="fa fa-user"
+                                            style="font-size: 40px; color: #fff; line-height: 70px;"></i>
+                                    </div>
                                     <blockquote>
                                         <i class="fa fa-quote-right"></i>
                                         <q>I recommend everyone to use them. You will feel so special and not just like
@@ -1187,7 +1182,6 @@
                                     <div class="testi-des">
                                         <div class="peopl align-self">
                                             <h3>RAJENDAR PRASAD</h3>
-
                                         </div>
                                     </div>
                                 </div>
@@ -1196,7 +1190,10 @@
                         <div class="item">
                             <div class="testimonial-content">
                                 <div class="testimonial">
-
+                                    <div class="test-img">
+                                        <i class="fa fa-user"
+                                            style="font-size: 40px; color: #fff; line-height: 70px;"></i>
+                                    </div>
                                     <blockquote>
                                         <i class="fa fa-quote-right"></i>
                                         <q>AAAAAAmazing! That’s the best way to put it. From price, to food, to how the
@@ -1211,7 +1208,6 @@
                                     <div class="testi-des">
                                         <div class="peopl align-self">
                                             <h3>VIKRAM RAO</h3>
-
                                         </div>
                                     </div>
                                 </div>
@@ -1220,7 +1216,10 @@
                         <div class="item">
                             <div class="testimonial-content">
                                 <div class="testimonial">
-
+                                    <div class="test-img">
+                                        <i class="fa fa-user"
+                                            style="font-size: 40px; color: #fff; line-height: 70px;"></i>
+                                    </div>
                                     <blockquote>
                                         <i class="fa fa-quote-right"></i>
                                         <q>Working with Sree Rajesh Caterers on my wedding day was just amazing. On my
@@ -1233,58 +1232,13 @@
                                     <div class="testi-des">
                                         <div class="peopl align-self">
                                             <h3>SEETHA RAMA RAJU</h3>
-
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="testimonial-content">
-                                <div class="testimonial">
-
-                                    <blockquote>
-                                        <i class="fa fa-quote-right"></i>
-                                        <q>Their food is very tasty. Moreover the way they present their food is
-                                            excellent. </q>
-                                    </blockquote>
-                                    <div class="testi-des">
-                                        <div class="peopl align-self">
-                                            <h3>Mahith Reddy</h3>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="testimonial-content">
-                                <div class="testimonial">
-
-                                    <blockquote>
-                                        <i class="fa fa-quote-right"></i>
-                                        <q>Awesom delicious food , clean and good service. Especially I liked Methi
-                                            Chicken gravy and it was super delicious , taste buds satisfying for me...
-                                            5stars for the taste!!!! 👍👍👍👍👍👌.</q>
-                                    </blockquote>
-                                    <div class="testi-des">
-                                        <div class="peopl align-self">
-                                            <h3>Madhavi Muralidhar </h3>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-
                     </div>
                 </div>
-            </div>
-            <!-- /grids -->
-        </div>
     </section>
     <!-- //testimonials section -->
 
@@ -1395,28 +1349,31 @@
 
     <script>
         $(document).ready(function () {
-            if ($("#owl-demo1").length) {
-                $("#owl-demo1").owlCarousel({
+            if ($("#owl-testimonials").length) {
+                $("#owl-testimonials").owlCarousel({
                     loop: true,
-                    margin: 20,
-                    nav: false,
+                    margin: 0,
+                    nav: true,
+                    dots: true,
                     autoplay: true,
                     autoplayTimeout: 5000,
                     autoplaySpeed: 1000,
+                    items: 1,
+                    navText: ['<span>‹</span>', '<span>›</span>'],
                     responsiveClass: true,
                     responsive: {
                         0: {
                             items: 1,
-                            nav: false
+                            nav: true
                         },
                         768: {
                             items: 1,
-                            nav: false
+                            nav: true
                         },
                         1000: {
                             items: 1,
-                            nav: false,
-                            loop: false
+                            nav: true,
+                            loop: true
                         }
                     }
                 })
