--- a/Gallery.html
+++ b/Gallery.html
@@ -1276,7 +1276,7 @@
                         <p>With over 25+ years of experience in event management and catering, we have been delivering
                             exceptional
                             services since 2000, creating unforgettable experiences for our clients.</p>
-                        <div class="columns-2 abtus">
+                        <div class="columns-2 mt-4">
                             <ul class="social" style="margin-top: 30px;">
                                 <li><a href="#facebook"><i class="fa fa-facebook"></i></a>
                                 </li>
@@ -1289,7 +1289,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-sm-6 column ps-xl-5 mt-sm-0">
+                    <div class="col-lg-2 col-sm-6 column ps-xl-5 mt-sm-0 mt-4">
                         <h3>Quick Link</h3>
                         <ul class="footer-gd-16">
                             <li><a href="index.html">Home</a></li>
@@ -1299,22 +1299,24 @@
                             <li><a href="Contact.html">Contact Us</a></li>
                         </ul>
                     </div>
+
                     <div class="col-lg-3 col-sm-6 column ps-xl-5 pe-lg-0 mt-lg-0 mt-4">
                         <h3>Address</h3>
                         <ul class="footer-contact-list">
                             <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">6-1-311, Sahu
-                                    Rd, Prasanth Nagar,
+                                    Rd, Prasanth
+                                    Nagar,
                                     Miyapur, Hyderabad 500049</span></li>
-                            <p class="mt-2" style="margin-top: 20px;"></p>
-                            <div class="footer-botm">
+                            <p class="mt-4" style="margin-top: 20px;"></p>
+                            <div class="footer-botm mt-4">
                                 <h6>Open Hours :</h6>
-                                <p class="mt-2"><span>Mon – Sun</span> : 8 am – 10 pm</p>
+                                <p class="mt-4"><span>Mon – Sun</span> : 8 am – 10 pm</p>
                                 <!--<p> <span>Sunday</span> : CLOSED</p>-->
                             </div>
 
                         </ul>
-
                     </div>
+
                     <div class="col-lg-4 col-sm-6 column mt-lg-0 mt-4 ps-xl-5">
                         <h3>Contact Info</h3>
                         <ul class="footer-contact-list">
@@ -1329,14 +1331,7 @@
                             <li class="mt-2"><i class="fa fa-envelope"></i><span><a
                                         href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span>
                             </li>
-
-                            <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hn.cateringservices@gmail.com">hn.cateringservices@gmail.com</a></span>
-                            </li>
-                            <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hanuma.marilla@gmail.com">hanuma.marilla@gmail.com</a></span></li>
                         </ul>
-                        <!--<p class="sub">Subscribe to our mailing list and get updates to your email inbox.</p>-->
                     </div>
                 </div>
             </div>
@@ -1344,8 +1339,8 @@
         <div class="copy-section text-center py-4">
             <div class="container">
                 <p class="copy-text py-1">© 2026 Sree Rajesh Caterers. All rights reserved. Design by <a
-                        href="https://thebubblesmedia.com/" class="bubbles-media" id="bubble-link">The Bubbles
-                        Media</a></p>
+                        href="https://thebubblesmedia.com/" class="bubbles-media" id="bubble-link">The Bubbles Media</a>
+                </p>
             </div>
         </div>
     </footer>
