--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -375,7 +375,8 @@
                         <h3>Address</h3>
                         <ul class="footer-contact-list">
                             <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">6-1-311, Sahu
-                                    Rd, Prasanth Nagar,
+                                    Rd, Prasanth
+                                    Nagar,
                                     Miyapur, Hyderabad 500049</span></li>
                             <p class="mt-4" style="margin-top: 20px;"></p>
                             <div class="footer-botm mt-4">
@@ -401,11 +402,6 @@
                             <li class="mt-2"><i class="fa fa-envelope"></i><span><a
                                         href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span>
                             </li>
-                            <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hn.cateringservices@gmail.com">hn.cateringservices@gmail.com</a></span>
-                            </li>
-                            <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:hanuma.marilla@gmail.com">hanuma.marilla@gmail.com</a></span></li>
                         </ul>
                     </div>
                 </div>
@@ -414,8 +410,8 @@
         <div class="copy-section text-center py-4">
             <div class="container">
                 <p class="copy-text py-1">© 2026 Sree Rajesh Caterers. All rights reserved. Design by <a
-                        href="https://thebubblesmedia.com/" class="bubbles-media" id="bubble-link">The Bubbles
-                        Media</a></p>
+                        href="https://thebubblesmedia.com/" class="bubbles-media" id="bubble-link">The Bubbles Media</a>
+                </p>
             </div>
         </div>
     </footer>
