--- a/Veg.html
+++ b/Veg.html
@@ -436,7 +436,8 @@
                         <h3>Address</h3>
                         <ul class="footer-contact-list">
                             <li class=""><i class="fa fa-map-marker"></i><span style="font-size: 18px;">6-1-311, Sahu
-                                    Rd, Prasanth Nagar,
+                                    Rd, Prasanth
+                                    Nagar,
                                     Miyapur, Hyderabad 500049</span></li>
                             <p class="mt-4" style="margin-top: 20px;"></p>
                             <div class="footer-botm mt-4">
