--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
             <ul class="footer-gd-16">
               <li><a href="index.html">Home</a></li>
               <li><a href="About.html">About Us</a></li>
-              <li><a href="Menu.html">Menu</a></li>
+              <li><a href="Veg.html">Menu</a></li>
               <li><a href="Gallery.html">Gallery</a></li>
               <li><a href="Contact.html">Contact Us</a></li>
             </ul>
