--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
                         The Best
                         Caterers In Town</p>
                     <p class="pull-right" data-aos="fade-left" data-aos-duration="3000"><i class="fa fa-phone"></i>Order
-                        Online 8885467894</p>
+                        Online +91 92462 41199</p>
                 </div>
             </div>
         </div>
