--- a/About.html
+++ b/About.html
@@ -1082,15 +1082,36 @@
                         data-aos="zoom-in-down" data-aos-duration="3000">
                 </div>
                 <div class="col-lg-6">
-                    <p style="font-size:20px; text-align:justify;">From weddings and birthday parties to traditional
-                        ceremonies and housewarming functions, we have successfully served on over 8,000+ occasions,
-                        building a trusted clientele that includes corporates, banks, and high-net-worth individuals.
-                        Among our esteemed clientele are State Bank of India, Blue star, Sria banquets, TSERC, Worley,
-                        INTEQ and Akems to name a few. At Sree Rajesh Caterers, our commitment to quality and taste
-                        remains unwavering, making us the go-to-choice for those who seek an exceptional and flavorful
-                        catering experience.</p>
-                    <a class="btn btn-style1 mt-md-5 mt-4" href="javascript:void(0)"> Read More </a>
+                    <p style="font-size:20px; text-align:justify;">
+                        With experience spanning more than 8,000+ successful events—including weddings, birthdays,
+                        traditional ceremonies, and housewarming functions—we have built a strong reputation among
+                        corporate clients, venues, and valued patrons.
+                        Sree Rajesh Caterers is committed to excellence in quality, hygiene, and flavor, ensuring every
+                        event is enhanced with a truly memorable dining experience.
+                    </p>
+
+                    <p style="font-size:20px; text-align:justify;">
+                        With a dedicated team of experienced chefs and service professionals, we focus on delivering
+                        customized menus that suit the unique preferences and traditions of every client. Our expertise
+                        spans a wide range of cuisines, ensuring that each dish is prepared with the finest ingredients
+                        and served with the highest standards of presentation and hospitality.
+                    </p>
+
+                    <p style="font-size:20px; text-align:justify;">
+                        We take pride in our ability to handle events of all sizes—from intimate family gatherings to
+                        large-scale celebrations—while maintaining consistency in taste, quality, and service. Every
+                        occasion we cater is approached with careful planning, attention to detail, and a commitment to
+                        exceeding client expectations.
+                    </p>
+
+                    <p style="font-size:20px; text-align:justify;">
+                        Our goal is not just to provide food, but to create a complete dining experience that leaves a
+                        lasting impression on guests and hosts alike.
+                    </p>
+
+                    <!-- <a class="btn btn-style1 mt-md-5 mt-4" href="javascript:void(0)">Read More</a> -->
                 </div>
+
 
             </div>
         </div>
