--- a/About.html
+++ b/About.html
@@ -1123,8 +1123,8 @@
         <div class="container pb-lg-5 pb-md-4 pb-2">
             <div class="row mb-md-5 mb-4">
                 <div class="col-md-10 col-lg-7 mx-auto text-center px-xl-4">
-                    <h5 class="sub-title text-center">Explore our world</h5>
-                    <h3 class="title-style text-center">Get the best out of our catering expertise here</h3>
+                    <h5 class="sub-title text-center">Uncover Our Expertise</h5>
+                    <h3 class="title-style text-center">Your Journey to a Perfect Feast</h3>
                 </div>
             </div>
             <div class="row justify-content-center text-center">
@@ -1134,10 +1134,10 @@
                             <i class="fa fa-bars"></i>
                         </div>
                         <div class="grids-content">
-                            <h5 class="mb-3"><a href="#">Choose Menu</a></h5>
-                            <p>We have the most carefully crafted menus to suit your requirements, be it vegetarian or
-                                non-vegetarian.</p>
-                            <a href="javascript:void(0)" class="btn btn-style btn-style-primary mt-3">Learn More</a>
+                            <h5 class="mb-3"><a href="#">Curated Menus</a></h5>
+                            <p>Discover our meticulously crafted menus, offering a diverse array of vegetarian and
+                                non-vegetarian masterpieces designed to suit every palate.</p>
+                            <a href="javascript:void(0)" class="btn btn-style btn-style-primary mt-3">View Options</a>
                         </div>
                     </div>
                 </div>
@@ -1147,10 +1147,10 @@
                             <i class="fa fa-adjust"></i>
                         </div>
                         <div class="grids-content">
-                            <h5 class="mb-3"><a href="#">Customize to your needs</a></h5>
-                            <p>You can pick from items, tailor to your event attendees and arrive at that perfect menu
-                                for your occasion.</p>
-                            <a href="javascript:void(0)" class="btn btn-style btn-style-primary mt-3">Learn More</a>
+                            <h5 class="mb-3"><a href="#">Tailored to Perfection</a></h5>
+                            <p>Personalize every detail. Select from our extensive offerings to build a bespoke menu
+                                that perfectly complements your event and delights your guests.</p>
+                            <a href="javascript:void(0)" class="btn btn-style btn-style-primary mt-3">Customize Now</a>
                         </div>
                     </div>
                 </div>
@@ -1160,11 +1160,10 @@
                             <i class="fa fa-shopping-bag"></i>
                         </div>
                         <div class="grids-content">
-                            <h5 class="mb-3"><a href="#">Place your order</a></h5>
-                            <p>You’re now all set to experience the Sree Rajesh Caterers excellence that’ll add a new
-                                dimension
-                                to your event.</p>
-                            <a href="javascript:void(0)" class="btn btn-style btn-style-primary mt-3">Learn More</a>
+                            <h5 class="mb-3"><a href="#">Seamless Experience</a></h5>
+                            <p>Relax as we bring the Sree Rajesh Caterers excellence to your celebration, adding a new
+                                dimension of flavor, elegance, and service to your event.</p>
+                            <a href="javascript:void(0)" class="btn btn-style btn-style-primary mt-3">Book Event</a>
                         </div>
                     </div>
                 </div>
