--- a/Gallery.html
+++ b/Gallery.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/4S1KrRELUsPW.css">
     <link rel="stylesheet" type="text/css" href="css/v6mS0LGdZG5E.css">
     <link rel="stylesheet" type="text/css" href="css/oCEjUZZFGIAd.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="shortcut icon" href="rajeshimedia/logo.png">
 
     <!--[if lt IE 9]>
@@ -793,142 +794,6 @@
 
         .copy-section {
             background-color: #c58723;
-        }
-
-        .w3l-footer-16 h3 {
-            font-size: 25px;
-            line-height: 25px;
-            margin-bottom: 35px;
-            color: #fff;
-            font-weight: bold;
-        }
-
-        .footer-botm h6 {
-            color: #fff;
-            font-weight: bold;
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .w3l-footer-16 li span,
-        .w3l-footer-16 p,
-        .w3l-footer-16 li a {
-            color: #fffcfc;
-            font-weight: 400;
-        }
-
-        .w3l-footer-16 li a {
-            margin-bottom: 17px;
-            display: block;
-            font-size: 18px;
-        }
-
-        /*.footer-botm p {*/
-        /*  display: flex;*/
-        /*}*/
-
-        .footer-botm p span {
-            width: 80px;
-        }
-
-        footer p {
-            font-size: 20px;
-        }
-
-        .w3l-footer-16 li a:hover {
-            color: #e25111;
-        }
-
-        .footer-contact-list li {
-            display: flex;
-            align-items: baseline;
-        }
-
-        .footer-contact-list li i {
-            color: #f6f0ed;
-            margin-right: 10px;
-            font-size: 25px;
-        }
-
-        .footer-contact-list li a:hover {
-            color: #e25111;
-        }
-
-        .w3l-footer-16 ul.social li {
-            display: inline-block;
-        }
-
-        .w3l-footer-16 ul.social li a {
-            display: inline-block;
-            border-radius: 50%;
-            text-align: center;
-            margin-right: 8px;
-            font-size: 13px;
-            width: 30px;
-            height: 30px;
-            background: orange;
-            color: #fff;
-            line-height: 30px;
-        }
-
-        .w3l-footer-16 ul.social li:last-child a {
-            margin-right: 0px;
-        }
-
-        .w3l-footer-16 ul.social li a:hover {
-            -webkit-transform: translateY(-4px);
-            -khtml-transform: translateY(-4px);
-            -moz-transform: translateY(-4px);
-            -ms-transform: translateY(-4px);
-            -o-transform: translateY(-4px);
-            transform: translateY(-4 px);
-        }
-
-        .w3l-footer-16 p.copy-text {
-            color: #fff;
-            padding: 19px;
-        }
-
-        .w3l-footer-16 p.copy-text a {
-            color: var(--primary-color);
-            position: relative;
-            text-decoration: none;
-        }
-
-        .w3l-footer-16 p.copy-text a:hover {
-            color: #e2d811;
-        }
-
-        /* Bubble Animation Styles */
-        .bubbles-media {
-            display: inline-block;
-            position: relative;
-            color: #fff !important;
-            font-weight: bold;
-            text-decoration: none;
-        }
-
-        .bubbles-media span {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-
-        .bubbles-media:hover .bubble {
-            opacity: 1;
-            transform: translateY(-50px);
-        }
-
-        .bubble {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.4);
-            border-radius: 50%;
-            opacity: 0;
-            transition: transform 1s ease-out, opacity 1s ease-out;
         }
 
         .w3l-footer-16 input[type="email"] {
