--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/4S1KrRELUsPW.css">
     <link rel="stylesheet" type="text/css" href="css/v6mS0LGdZG5E.css">
     <link rel="stylesheet" type="text/css" href="css/oCEjUZZFGIAd.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="shortcut icon" href="rajeshimedia/logo.png">
 
     <!--[if lt IE 9]>
