--- a/Veg.html
+++ b/Veg.html
@@ -21,7 +21,7 @@
     <link href="css/4S1KrRELUsPW.css" rel="stylesheet" type="text/css" />
     <link href="css/v6mS0LGdZG5E.css" rel="stylesheet" type="text/css" />
     <link href="css/oCEjUZZFGIAd.css" rel="stylesheet" type="text/css" />
-    <link href="css/veg-menu-custom.css" rel="stylesheet" type="text/css" />
+    <link href="css/menu-custom.css" rel="stylesheet" type="text/css" />
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
     <link href="rajeshimedia/logo.png" rel="shortcut icon" />
     <!--[if lt IE 9]>
