--- a/Gallery.html
+++ b/Gallery.html
@@ -45,7 +45,7 @@
     <!-- New toolbar-->
     <style>
         #page_header {
-            background: url(assets/images/About-Banner.jpg) no-repeat;
+            background: url(rajeshimedia/galleryhero.png) no-repeat;
             width: 100%;
             position: relative;
             min-height: 315px;
