--- a/Gallery.html
+++ b/Gallery.html
@@ -987,8 +987,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#">Herbs &amp; Cheese Stake</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#">Traditional Mutton Biryani</a></h3>
+                                            <p>Authentic Hyderabadi Mutton Biryani</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1006,8 +1006,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#">Spaghetti</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#">Premium Veg Thali</a></h3>
+                                            <p>A complete meal with authentic flavors</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1026,8 +1026,8 @@
                                         </div>
                                     </div>
                                     <div class="gallery_content">
-                                        <h3><a href="#">Crispy Sandwich</a></h3>
-                                        <p>Duis autem vel eum iriure dolor</p>
+                                        <h3><a href="#">Vegetable Manchuria</a></h3>
+                                        <p>Crispy and delicious Indo-Chinese starter</p>
                                     </div>
                                 </div>
                             </div>
@@ -1043,8 +1043,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#.">Cream Cake</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#.">Qubani Ka Meetha</a></h3>
+                                            <p>Classic Hyderabadi Apricot dessert</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1061,8 +1061,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#">Chocolate Cup Cake</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#">Double Ka Meeta</a></h3>
+                                            <p>Rich and creamy bread pudding dessert</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1079,8 +1079,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#">Grilled Spice Chicken</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#">Chicken 65 Special</a></h3>
+                                            <p>Spicy and succulent deep-fried chicken</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1097,8 +1097,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#">Cheese and Chorizo Rolls</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#">Paneer Tikka</a></h3>
+                                            <p>Marinated paneer cubes grilled to perfection</p>
                                         </div>
                                     </div>
                                 </div>
@@ -1115,8 +1115,8 @@
                                             </div>
                                         </div>
                                         <div class="gallery_content">
-                                            <h3><a href="#">Roasted Chicken</a></h3>
-                                            <p>Duis autem vel eum iriure dolor</p>
+                                            <h3><a href="#">Tandoori Chicken</a></h3>
+                                            <p>Traditional tandoor-cooked spiced chicken</p>
                                         </div>
                                     </div>
                                 </div>
