--- a/Gallery.html
+++ b/Gallery.html
@@ -997,9 +997,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-galler2.jpg" alt="cook">
+                                            <img src="rajeshimedia/Premium Veg Thali.png" cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/galler2.jpg"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Premium Veg Thali.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i>
                                                 </a>
@@ -1089,9 +1090,9 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery7.jpg" alt="cook">
+                                            <img src="rajeshimedia/Paneer Tikka.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/gallery7.jpg"
+                                                <a class="fancybox overlay-inner" href="rajeshimedia/Paneer Tikka.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
